<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="warningMessage"
            type="String" />

        <variable
            name="clickHandler"
            type="com.example.myapplication.ui.YesNoDialog.YesNoDialogEventHandler" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/curve_shape_white"
            android:clipChildren="true"
            android:maxWidth="300dp"
            android:maxHeight="300dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_dialog_grey"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ARE_YOU_SURE"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvWarningMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{warningMessage}"
                tools:text="@string/LOGOUT_WARNING_MESSAGE"
                android:textColor="@color/grey_80"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::onCancelBtnClicked}"
                    android:text="@string/CANCEL"
                    android:textAllCaps="false"
                    android:textColor="@color/red_900" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::onSureBtnClicked}"
                    android:text="@string/SURE"
                    android:textAllCaps="false"
                    android:textColor="@color/greenDark" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>