<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.example.myapplication.model.entities.User" />

        <variable
            name="clickHandler"
            type="com.example.myapplication.view.fragment.RegisterFragment.RegisterFragmentEventHandlers" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="16dp"
                        android:text="@string/REGISTER"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/CREATE_USER"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="16dp"
                        android:hint="@string/FULL_NAME"
                        android:inputType="textPersonName"
                        android:text="@={user.fullName}" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="16dp"
                        android:hint="@string/USER_NAME"
                        android:inputType="textPersonName"
                        android:text="@={user.userName}" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="16dp"
                        android:hint="@string/EMAIL"
                        android:inputType="textEmailAddress"
                        android:text="@={user.email}" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:hint="@string/PASSWORD"
                        android:inputType="textPassword"
                        android:text="@={user.password}" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordConfirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:hint="@string/CONFIRM_PASSWORD"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnCreateUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_rounded_green_300"
                        android:onClick="@{clickHandler::onRegisterButtonClicked}"
                        android:text="@string/REGISTER"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>
</layout>