<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoItem"
            type="com.example.myapplication.model.entities.TodoItem" />

        <variable
            name="clickHandler"
            type="com.example.myapplication.view.fragment.TodoItemFormFragment.TodoItemFormEventHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".view.fragment.TodoItemFormFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/ITEM_TITLE"
                android:textColor="@color/grey_80"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/box_edittext_shape"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={todoItem.name}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/ITEM_DESCRIPTION"
                android:textColor="@color/grey_80"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/box_edittext_shape"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:text="@={todoItem.description}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/ITEM_DEADLINE"
                android:textColor="@color/grey_80"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{clickHandler::onSelectDateClicked}"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/select_date"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_900" />

                <TextView
                    android:id="@+id/tvDateString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/red_900"
                    android:textStyle="bold|italic"
                    tools:text="15/6/2019" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_rounded_green_300"
                android:onClick="@{clickHandler::onAddBtnClicked}"
                android:text="@string/ADD"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

</layout>
