<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.example.myapplication.model.entities.User" />

        <variable
            name="clickHandler"
            type="com.example.myapplication.view.fragment.LoginFragment.LoginFragmentEventHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:weightSum="2"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/WELCOME_TO_TODOAPP"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/greenLight"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/SIGN_IN_TO_CONTINUE"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/USERNAME"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={user.userName}"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PASSWORD"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={user.password}"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_rounded_green_300"
                    android:onClick="@{clickHandler::onSignInClicked}"
                    android:text="@string/S_I_G_N_I_N"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:id="@+id/sign_up_for_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SIGN_UP_FOR_AN_ACCOUNT"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{clickHandler::onRegisterClicked}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/blue_grey_400" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</layout>